# laixhe-api

./: JWT.md  LICENSE  README.md  webapi.sql
GoWebApi/: .gitignore  Dockerfile  Makefile  README.md  config.yaml  go.mod  go.sum  main.go
GoWebApi/app/: app.go
GoWebApi/app/controllers/: auth.go  cauth.go  controller.go  user.go
GoWebApi/app/entity/: auth.go  user.go
GoWebApi/app/middleware/: authjwt.go
GoWebApi/app/model/: config_common.go  user.go  user_extend.go  user_sex.go  user_states.go  user_third_party.go  user_type.go
GoWebApi/app/models/: config_common.go  config_common_key.go  model.go  states.go  user.go  user_extend.go  user_sex.go  user_states.go  user_third_party.go  user_type.go
GoWebApi/app/result/: result.go
GoWebApi/app/services/: auth.go  sauth.go  service.go  user.go
GoWebApi/app/util/: regexp.go
GoWebApi/app/utils/: regexp.go
GoWebApi/core/: config.go  error.go  init.go  log.go  orm.go  server.go  success.go
GoWebApi/core/config/: config.go
GoWebApi/core/confx/: conf.go  env.go
GoWebApi/core/errorx/: error.go
GoWebApi/core/ginx/: jwt.go  midware.go  response.go
GoWebApi/core/gormx/: gorm.go  logger.go  util.go
GoWebApi/core/i18nx/: i18nx.go
GoWebApi/core/jwtx/: jwt.go
GoWebApi/core/logx/: logx.go  zap.go
GoWebApi/core/middlewares/: cors.go  error.go  jwt.go  log.go  middleware.go  recover.go  request.go
GoWebApi/core/mongox/: mongo.go
GoWebApi/core/redisx/: redis.go
GoWebApi/core/requestx/: request.go
GoWebApi/core/responsex/: response.go
GoWebApi/core/timex/: timex.go
GoWebApi/core/utils/: translator.go
GoWebApi/docs/: docs.go  errordescription.go  swagger.go  swagger.json  swagger.yaml
GoWebApi/i18n/: en.toml  zh-CN.toml
GoWebApi/profile/auth/: login.proto  refresh.proto  register.proto
GoWebApi/profile/code/: ecode.proto
GoWebApi/profile/user/: info.proto  list.proto  update.proto  (+1 more)
GoWebApi/router/: auth.go  midware.go  router.go  routerauth.go  routeruser.go  user.go
GoWebApi/routers/: auth.go  router.go  user.go
JavaWebApi/: README.md  pom.xml
PhpWebApi/: .env  .gitignore  README.md  composer.json
PhpWebApi/app/: Helpers.php
PhpWebApi/config/: auth.php  cache.php  database.php  queue.php  services.php  session.php
PhpWebApi/routes/: api.php  web.php
PyWebApi/: .env  .gitignore  README.md  main.py  pyproject.toml
PyWebApi/app/controllers/: __init__.py  auth_login.py  auth_register.py
PyWebApi/app/errors/: __init__.py
PyWebApi/app/exception/: __init__.py  exception_handler.py
PyWebApi/app/request/: auth_login.py
PyWebApi/app/result/: result.py
PyWebApi/app/services/: auth_login.py
PyWebApi/app/types/response/: __init__.py  http_response.py
PyWebApi/config/: __init__.py  env.py
PyWebApi/core/db/: sqlalchemyx.py
RsWebApi/: Cargo.toml
RsWebApi/src/: main.rs
RsWebApi/src/controllers/: auth.rs  user.rs
RsWebApi/src/routers/: mod.rs
TsWebApi/: .env  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
TsWebApi/prisma/: schema.prisma
TsWebApi/src/: index.ts
(+120 files in other folders)
