[tool.poetry]
name = "webapi"
version = "0.1.0"
description = ""
authors = ["'laixhe' <'laixhe@laixhe.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30"
fastapi = "^0.115"
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"
sqlalchemy = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
