[package]
name = "webapi"
version = "0.1.0"
authors = ["laixhe <laixhe@laixhe.com>"]
edition = "2024"

[dependencies]
# 异步
tokio = { version = "1.49", features = ["full"] }
# web
axum = "0.8"
axum-extra = "0.12"
axum-macros = "0.5"
http = "1.4"
tower = "0.5"
tower-http = "0.6"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 时间
chrono = {version = "0.4",features=["serde"]}
time = "0.3"
# JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# 错误 error
anyhow = "1.0"
# 数据库
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
# 参数(表单)验证
validator = { version = "0.20", features = ["derive"] }

#[dev-dependencies]
