[package]
name = "webapi"
version = "0.1.0"
authors = ["laixhe <laixhe@laixhe.com>"]
edition = "2024"

[dependencies]
# 异步
tokio = { version = "1.52", features = ["full"] }
# web
axum = "0.8"
axum-extra = "0.12"
axum-macros = "0.5"
http = "1.4"
tower = "0.5"
tower-http = { version = "0.7", features = ["trace"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 时间
time = "0.3"
jiff = {version = "0.2",features=["serde"]}
chrono = {version = "0.4",features=["serde"]}
# JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# 错误
thiserror = "2.0"
anyhow = "1.0"
# 数据库 sqlite mysql postgres chrono time json
sqlx = { version = "0.9", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
# 参数(表单)验证
validator = { version = "0.20", features = ["derive"] }

#[dev-dependencies]
